--- a/.htaccess
+++ b/.htaccess
@@ -3,18 +3,11 @@ RewriteEngine On
 
 AddDefaultCharset utf-8
 
-#2 variables
-Rewriterule ^(.*)/(.*)/$ /www/mirayvota/?a=$1&b=$2 [L]
-#1 variable
-Rewriterule ^(.*)/$ /www/mirayvota/?a=$1 [L]
+Rewriterule ^(.*)/(.*)/$ /?a=$1&b=$2 [L]
+Rewriterule ^(.*)/$ /?a=$1 [L]
 
-#RewriteCond %{REQUEST_FILENAME} -d
 RewriteCond %{HTTPS}s ^on(s)|off
-#RewriteRule [^/]$ http%1://%{HTTP_HOST}%{REQUEST_URI}/ [R=301,L]
 
-# add trailing slashes
-#RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteRule .*[^/]$ $0/ [L,R=301]
-#RewriteRule .*[^/]$ http%1://%{HTTP_HOST}%{REQUEST_URI}/ [R=301,L]
 RewriteRule [^/]$ http%1://%{HTTP_HOST}%{REQUEST_URI}/ [R=301,L]
+
